# ROS_UR_RG2

./: README.md
rg2_ws/devel/: .catkin  _setup_util.py
rg2_ws/devel/include/pick_place_msgs/: PickStep.h  PickStepRequest.h  PickStepResponse.h
rg2_ws/devel/lib/pkgconfig/: gazebo_ros_link_attacher.pc  my_moveit_demo.pc  onrobot_rg_description.pc  opencv_pratice.pc  pick_place_msgs.pc  rg2_description.pc  roboticsgroup_gazebo_plugins.pc  roboticsgroup_upatras_gazebo_plugins.pc  tm_app.pc  ur10_moveit_config.pc  ur10e_moveit_config.pc  ur12e_moveit_config.pc  ur16e_moveit_config.pc  ur20_moveit_config.pc  ur30_moveit_config.pc  ur3_moveit_config.pc  ur3e_moveit_config.pc  ur5_moveit_config.pc  ur5_rg2_moveit_config.pc  ur5e_moveit_config.pc  ur7e_moveit_config.pc  ur_app_youtube.pc  ur_description.pc  ur_gazebo.pc  ur_kinematics.pc
rg2_ws/devel/share/gazebo_ros_link_attacher/cmake/: gazebo_ros_link_attacher-msg-extras.cmake  gazebo_ros_link_attacherConfig.cmake
rg2_ws/devel/share/my_moveit_demo/cmake/: my_moveit_demoConfig.cmake
rg2_ws/src/my_moveit_demo/: CMakeLists.txt  package.xml
rg2_ws/src/my_moveit_demo/scripts/: attach_and_detach.py  cartesian_demo.py  circular_cartesian_path.py  gripper.py  link_transform.py  move_to_up_pose.py  moveit_fk_demo.py  object.py  pick_place_main.py  safe_demo.py  setting_parameters.py  test.py  tool.py
rg2_ws/src/onrobot_rg_description/urdf/: onrobot_rg2.xacro  onrobot_rg2_transmission.xacro
rg2_ws/src/opencv_pratice/: CMakeLists.txt
rg2_ws/src/opencv_pratice/scripts/: green_detection.py
rg2_ws/src/pick_place_msgs/: CMakeLists.txt  package.xml
rg2_ws/src/pick_place_msgs/scripts/: gripper_server.py  pick_place_server.py
rg2_ws/src/pick_place_msgs/srv/: PickStep.srv
rg2_ws/src/rg2_description/urdf/: rg2.urdf.xacro
rg2_ws/src/tm_app/: CMakeLists.txt  package.xml
rg2_ws/src/tm_app/config/: ur5_rg2_controllers.yaml
rg2_ws/src/tm_app/urdf/: eef.xacro  ur5_yt_gripper.xacro
rg2_ws/src/ur5_rg2_moveit_config/: .setup_assistant  package.xml
rg2_ws/src/ur5_rg2_moveit_config/config/: fake_controllers.yaml  gazebo_ur5_robot.urdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  ur5_robot.srdf
rg2_ws/src/ur5_rg2_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  gazebo.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  ur5_robot_moveit_sensor_manager.launch
(+45 files in other folders)
